Stibilize ITs by using separate config scope for each test